# SudokuSolver

./: .gitignore  .readme  CMakeLists.txt  README.md
src/: box.c  box.h  helper.c  helper.h  index.html  main.c  puzzle.c  puzzle.h  row.c  row.h  square.c  square.h  sudoku.c  sudoku.h  wasm_api.c
src/css/: style.css
src/includes/: main.js
